# recnik

./: .clinerules  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CAPTCHA_SETUP.md  HTTPS_SETUP.md  IMAGE_SYNC_IMPLEMENTATION.md  IMAGE_SYNC_QUICK_START.md  IMAGE_SYNC_SERVICE_ARCHITECTURE.md  LICENSE  MONITORING_SETUP.md  Makefile  README.md  REDIS_CACHE_IMPLEMENTATION.md  ROADMAP.md  RUN_USER_MIGRATION.md  SETTINGS_PAGE_IMPLEMENTATION.md  SETUP.md  TASK_COMMANDS.md  TOP100_IMPLEMENTATION.md  TROUBLESHOOTING.md  TTS_INTEGRATION_PROPOSAL.md  UNSPLASH_IMAGE_SERVICE.md  UPDATE_INSTRUCTIONS.md  USER_SPECIFIC_CHANGES_SUMMARY.md  analyze_code_lines.py  code_analysis_results.json  codecov.yml  docker-compose.yml  pyproject.toml  setup-quality-tools.sh  test-pr-manifest.yml  test_api.py  test_enhanced_search.py  test_image_queue_api.py  test_image_sync_service.py  test_llm_processing.py  test_rate_limited_images.py  test_unsplash_images.py
.github/workflows/: codecov-ai-review.yml  docker-build.yml  frontend-tests.yml  python-quality.yml  test-and-coverage.yml
backend/: .coverage  .env.example  Dockerfile  ORM_MIGRATION.md  TESTING.md  TESTING_CLEANUP.md  add_auth_tables.py  add_user_relationships.py  app.py  app_raw_sql.py  apply_performance_optimizations.py  cache_updater.py  config.py  demo_testing.py  fix_orphaned_vocabulary.py  image_queue_populator.py  image_service.py  image_service_client.py  image_service_mock.py  init.sh  migrate.py  models.py  package.json  populate_top_100_words.py  pytest.ini  requirements.txt  run_tests.py  server.js  validate_testing_setup.py
backend/migrations/: add_auto_advance_settings.py  add_auto_play_voice_setting.py  add_avatar_fields.py  add_excluded_words_table.py  add_mastery_threshold_column.py  add_practice_round_count.py  add_sounds_enabled_setting.py  add_streaks_models.py  add_xp_achievement_system.py  update_mastery_threshold.py
backend/services/: avatar_service.py  captcha_service.py  optimized_text_processor.py  sentence_cache.py  streak_service.py  text_processor.py  translation_cache.py  xp_service.py
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_avatar_service.py  test_captcha_service.py  test_core_functionality.py  test_essential.py  test_image_service.py  test_models.py  test_models_only.py  test_sentence_cache.py  test_streak_service.py.disabled  test_text_processor.py  test_translation_cache.py  test_xp_service.py.disabled
database/: README.md  init.sql  performance_indexes.sql
docs/: architecture.md
docs/cline/: BANDIT_CI_FIX_SUMMARY.md  BANDIT_FIX_SUMMARY.md  BUILD_MATRIX_SYSTEM.md  CODECOV_INTEGRATION.md  CODE_QUALITY.md  DOCKER_TAGGING_FIX.md  SERVICE_CONFIG_SYSTEM.md  frontend-ci-fix.md
frontend/: Dockerfile  nginx-https.conf  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  tts-test.html
frontend/src/: App.js  App.test.js  index.css
frontend/src/components/: AchievementsWidget.css  AchievementsWidget.js  AudioPlayer.js  CustomModal.css  CustomModal.js  StreakWidget.css  StreakWidget.js  ToastNotification.js  VoiceSelector.js  XPWidget.css  XPWidget.js
frontend/src/hooks/: useAudio.js  useAutoPlayVoice.js
frontend/src/pages/: AchievementsPage.css  AchievementsPage.js  ContentPage.css  ContentPage.js  HomePage.js  LoginPage.css  LoginPage.js  NewsPage.css  NewsPage.js  PracticePage.css  PracticePage.js  SettingsPage.css  SettingsPage.js  StreaksPage.css  StreaksPage.js  TextProcessorPage.js  Top100Page.css  Top100Page.js  VocabularyPage.css  VocabularyPage.js
frontend/src/services/: api.js  settingsService.js  soundService.js  ttsService.js
frontend/src/utils/: videoEmbedHandler.js
image-sync-service/: Dockerfile  image_sync_worker.py
issues/: 00-summary-executive-overview.md  01-performance-bottlenecks-monolithic-backend.md  02-incomplete-frontend-backend-integration.md  03-database-schema-performance-issues.md  04-testing-infrastructure-problems.md  05-security-configuration-issues.md  06-frontend-styling-ux-issues.md  07-missing-caching-strategy.md
monitoring/: README.md  alert-rules.yml  prometheus.yml
monitoring/grafana/dashboards/: application-dashboard.json  infrastructure-dashboard.json  simple-test.json
scripts/: analyze_code_lines.py  deploy-with-images.sh  fix-grafana-dashboards.sh  generate-build-matrix.sh  generate-deployment-manifest.sh  get-service-config.sh  setup-quality-tools.sh  start-https.sh  test-grafana-setup.sh  test_api.py  test_image_queue_api.py  test_image_sync_service.py  test_unsplash_images.py
services/auth-service/: Dockerfile  health.py  main.py  metrics.py  requirements.txt
services/auth-service/controllers/: auth_controller.py
services/auth-service/models/: user.py
services/auth-service/utils/: logger.py
services/backend-service/: .env.example  Dockerfile  TESTING_CLEANUP.md  add_auth_tables.py  app.py  app_raw_sql.py  apply_performance_optimizations.py  cache_updater.py  config.py  demo_testing.py  image_service.py  init.sh  migrate.py  models.py  pytest-results.xml  requirements-test.txt
services/backend-service/migrations/: add_avatar_fields.py  add_practice_round_count.py  add_sounds_enabled_setting.py  add_xp_achievement_system.py  update_mastery_threshold.py
services/backend-service/services/: captcha_service.py  optimized_text_processor.py  streak_service.py  text_processor.py
services/backend-service/tests/: __init__.py  conftest.py  test_avatar_service.py  test_core_functionality.py  test_essential.py  test_models_only.py  test_optimized_text_processor.py  test_streak_service.py  test_text_processing.py  test_translation_cache.py  test_xp_service.py  test_xp_service_unit.py
services/image-sync-service/: Dockerfile  image_sync_worker.py  requirements.txt
services/news-service/: Dockerfile  README.md  health.py  main.py  metrics.py  requirements.txt
services/news-service/controllers/: content_controller.py  news_controller.py
services/vocabulary-service/: Dockerfile  health.py  main.py  requirements.txt
ssl/: localhost.crt  localhost.key
(+6 files in other folders)
